(#42) Styling global IE10: Fixed layout problems with input clear button

--- a/scss/laxar_uikit/_forms.scss
+++ b/scss/laxar_uikit/_forms.scss
@@ -47,6 +47,10 @@ input[type="checkbox"] {
    }
 }
 
+input::-ms-clear {
+    display: none;
+}
+
 //
 // Input with amount and unit
 // -----------------------------------------------------------------------------------------------------------
